bluck update